add weather app

--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
     <h1>Javascript Projects</h1>
     <div class="main">
         <div class="card"><a href="./calculator/index.html">Calculator</a></div>
+        <div class="card"><a href="./weather app/index.html">Weather App</a></div>
     </div>
 </body>
 
