--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
     <div class="main">
         <div class="card"><a href="./calculator/index.html">Calculator</a></div>
         <div class="card"><a href="./weather app/index.html">Weather App</a></div>
+        <div class="card"><a href="./snake game/index.html">Snake Game</a></div>
     </div>
 </body>
 
