--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
         <div class="card"><a href="./calculator/index.html">Calculator</a></div>
         <div class="card"><a href="./weather app/index.html">Weather App</a></div>
         <div class="card"><a href="./snake game/index.html">Snake Game</a></div>
+        <div class="card"><a href="./todo app/index.html">Todo App</a></div>
     </div>
 </body>
 
